# trenchview

./: .gitignore  README.md  pyproject.toml  render.yaml
src/: coin_mentions.py  rick.py
src/tgtools/: cli.py  formatting.py  parsing.py  scraping.py  types.py
src/tgtools/parsing/: rickbot.py
src/trenchview/: cli.py  cmds.py  custom_types.py  formatting.py  logger.py  parsing.py  tiktok.py  trenchview_bot.py
src/trenchview/tg/: scraping.py  telethon.py  trenchview_bot.py
tests/formatting/: test_coincall_rows.py  test_group_into_parts.py
tests/parsing/: test_coincall.py  test_parsing.py
tests/trenchview_bot/: test_parse_duration.py
